--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id="first">HELLO, I'm</h1>
             <h1 id="coloredh1">Muhammad Jabir</h1>
             <p>A full stack allaround designer from <span class="green">Bangladesh.</span></p>
-            <p class="space"><a class="link-button" target="_blank" href="google.com">Hire me</a></p>
+            <p class="space"><a class="link-button" target="_blank" href="https://www.facebook.com/">Hire me</a></p>
         </div>
       <div class="half">
           <img src="images/jabir.png">
@@ -25,7 +25,7 @@
         <div class="half"><img src="images/smile.png" alt=""></div>
         <div class="half"><h2>ABOUT</h2><p>I am a student. I love learning. I want to be a professional developer.This is my first website.I am trying my best to boost up my skill. Actually, I am enjoying this and I think by following proper guidelines and with hardwork we can reach our goal. May Allah help us to make our dream true.  
         </p> 
-        <p class="space"><a class="link-button" target="_blank" href="">Download CV</a></p></div>
+        <p class="space"><a class="link-button" target="_blank" href="https://www.facebook.com/">Download CV</a></p></div>
 
     </section>
     <section class="lower">
@@ -43,11 +43,11 @@
     <h2>My Experiences</h2>
     <ul><li>Worked at xxx as full time designer from 2020-2021.</li>
         <li>Currently working as a front end Developer at xxx.</li>
-        <li>Hosted some amazing <a class="link-button1" target="_blank" href="">webpages</a> out of my passion. </li></ul>
+        <li>Hosted some amazing <a class="link-button1" target="_blank" href="https://www.facebook.com/">webpages</a> out of my passion. </li></ul>
     </section>
     <section class="last">
         <div class="half wr"><h1>Work Inquiry</h1></div>
-        <div class="half new"><a class="link-button" target="_blank" href="google.com">Let's chat</a></div>
+        <div class="half new"><a class="link-button" target="_blank" href="https://www.facebook.com/">Let's chat</a></div>
     </section>
     
 </body>
